tests/Jroc.Test262.Tests/built-ins/Error/JavaScript/prototype/S15.11.4_A3.js
assert.throws(TypeError, () => {
  Error.prototype();
  throw new Test262Error();
});

